...
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2dp"
                android:text="Delete Hotel" />

            <Button
                android:id="@+id/btn_filter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:text="Filter" />
            <Button
                android:id="@+id/btn_logout"
...
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/hotel_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/material_blue_grey_800"
                android:dividerHeight="1dp"
                android:footerDividersEnabled="false"
                />
...
